--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
       <section class="place section" id="place">
         <div class="place__container container">
           <h2 class="section__title">
-            Make you feel good With <br />
-            our comfy facilities and great ambiance,
+            Make you feel good and comfortable with <br />
+            our great facilities.
           </h2>
 
           <div class="place__content grid">
@@ -418,11 +418,11 @@
                 <div class="blog__stats">
                   <div class="blog__reaction">
                     <i class="bx bx-comment"></i>
-                    <span>12</span>
+                    <span>900</span>
                   </div>
                   <div class="blog__reaction">
                     <i class="bx bx-show"></i>
-                    <span>76,5k</span>
+                    <span>1.5M</span>
                   </div>
                 </div>
               </div>
